# drg-kg

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  BASLANGIC.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  EKSIKLER.md  EXTRACTION_ARCHITECTURE_REVIEW.md  IMPLEMENTATION_REPORT.md  LICENSE  MANIFEST.in  README.md  README.tr.md  REMAINING.md  SECURITY.md  STATUS.md  VERIFIED_FINDINGS.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
docs/: api_server.md  benchmarking.md  case_studies.md  chunking_strategy.en.md  chunking_strategy.md  clustering_summarization.md  community_launch.md  confidence_scoring.md  evaluation.md  evaluation_framework.md  event_extraction.md  getting_started.md  graph_versioning.md  hybrid_retrieval.md  incremental_updates.md  index.md  launch_checklist.md  mcp_integration.md  migration_policy.md  multi_document_reasoning.md  optimizer_design.md  pipeline_overview.md  pipeline_overview.tr.md  project_overview.md  project_overview.tr.md  provenance_tracking.md  public_api.md  query_layer.md  relationship_model.md  release_setup.md  schema_design.md  setup.md  temporal_graph.md
docs/adr/: 0001-record-architecture-decisions.md
docs/archive/: ARCHITECTURE_REVIEW.md  CODE_REVIEW_VERIFICATION.md  EXTRACTION_ARCHITECTURE_REVIEW.md  IMPLEMENTATION_REPORT.md
docs/assets/: README.md
drg/: __init__.py  cli.py  config.py  errors.py  mcp_api.py  mcp_server.py  protocols.py  schema.py
drg/api/: __init__.py  server.py
drg/api/templates/: index.html
drg/chunking/: __init__.py  strategies.py  validators.py
drg/clustering/: __init__.py  algorithms.py  summarization.py
drg/confidence/: __init__.py  _calibrated.py  _default.py  _strategy.py  _types.py
drg/coreference_resolution/: __init__.py  _heuristic_strategy.py  _nlp_strategy.py  _pronouns.py  _scoring.py  _strategy.py
drg/embedding/: __init__.py  providers.py
drg/entity_resolution/: __init__.py  _normalize.py  _resolver.py  _similarity.py  _strategy.py
drg/evaluation/: __init__.py  _adapters.py  _compare.py  _io.py  _metrics.py  _performance.py  _reporting.py  _runner.py  _suite.py  _types.py  graph.py  ontology.py
drg/events/: __init__.py  _extraction.py  _graph_mapping.py  _postprocess.py  _registry.py  _types.py
drg/extract/: __init__.py  _adapters.py  _chunk_context.py  _heuristics.py  _parsing.py  _relations.py  _schema_gen.py  _schema_prompts.py  _schema_sanitizer.py  _signatures.py  _types.py
drg/graph/: __init__.py  _legacy.py  auto_clusters.py  builders.py  community_report.py  construction_principles.py  diff.py  hub_mitigation.py  incremental.py  kg_core.py  neo4j_exporter.py  provenance.py  query_engine.py  schema_generator.py  validation.py  versioning.py  visualization.py
drg/graph/relationship_model/: __init__.py  _classifier.py  _enriched.py  _llm_based.py  _rule_based.py  _types.py
drg/graph/visualization_adapter/: __init__.py  _adapter.py  _cytoscape.py  _d3.py  _hubproxy.py  _palette.py  _provenance.py  _provenance_export.py  _vis_network.py
drg/optimizer/: __init__.py  metrics.py  optimizer.py
drg/query/: __init__.py  _analytics.py  _backend.py  _communities.py  _engine.py  _evidence.py  _explain.py  _hybrid.py  _memory.py  _search.py  _temporal.py  _traversal.py  _types.py  _vector.py  query_engine_compat.py
drg/reasoning/: __init__.py  _engine.py  _explain.py  _rules.py  _types.py
drg/temporal/: __init__.py  _compare.py  _migrate.py  _reasoning.py  _types.py
drg/utils/: cache.py  env_loader.py  llm_throttle.py  logging.py  strict.py
examples/: api_server_example.py  evaluation_framework_example.py  event_extraction_example.py  full_pipeline_example.py  hybrid_retrieval_example.py  incremental_update_example.py  mcp_demo.py  multi_document_reasoning_example.kg.json  multi_document_reasoning_example.py  optimizer_demo.py  query_layer_example.py  temporal_query_example.py
examples/benchmarks/: corporate_acquisition_benchmark.json  generate_scale_dataset.py  official_suite.json  sample_evaluation_report.md  synthetic_kg_benchmark.json
examples/quickstarts/: 01_wikipedia_article.json  01_wikipedia_article.py  02_financial_news.py  03_biomedical.py  README.md
inputs/: 1example_text.txt  3example_text.txt  4example_text.txt  input1.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  manifest.json
outputs/: output1_kg.json  output1_schema.json  output2_kg.json  output2_schema.json  output3_schema.json  output4_kg.json  output4_schema.json  output5_kg.json  output5_schema.json  output6_schema.json  output7_schema.json  output8_schema.json
reports/: sample_report.json
schemas/: global_default_schema.json
scripts/: run_remaining_tests.sh
tests/: README.md  conftest.py  test_anchor_selection.py  test_api_server.py  test_basic.py  test_chunking_strategies.py  test_chunking_validators.py  test_cli.py  test_cli_smoke.py  test_clustering_algorithms.py  test_clustering_summarization.py  test_confidence.py  test_coreference_safety.py  test_coreference_scoring.py  test_cross_chunk_snippets.py  test_di_and_protocols.py  test_docs_release_readiness.py  test_embedding_cache.py  test_entity_resolution_package.py  test_entity_resolution_safety.py  test_env_loader.py  test_errors.py  test_errors_adoption.py  test_evaluation.py  test_evaluation_framework.py  test_events_extraction.py  test_events_graph_mapping.py  test_events_postprocess.py  test_events_registry.py  test_events_types.py  test_extract_adapters.py  test_extract_core.py  test_extract_mock.py  test_extract_parsing.py  test_extract_relations.py  test_extract_schema_gen.py  test_extraction_functionality.py  test_fixtures.py  test_graph_auto_clusters.py  test_graph_builders.py  (+38 more)
tests/fixtures/: README.md  minimal_kg.json  minimal_schema.json
tests/multi_dataset/: __init__.py  evaluation.py
