[project]
name = "drg-kg"
version = "0.1.0a0"
description = "Declarative Relationship Generation (DRG) - schema-driven Knowledge Graph extraction"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Helin Dinçel"}]
keywords = ["knowledge-graph", "dspy", "nlp", "kg-extraction", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core dependencies (always required)
    "dspy>=2.5.0,<3.0.0",  # TypedPredictor requires 2.5+, stay within 2.x API
    "pydantic>=2.0.0",     # Used by DSPy TypedPredictor and schema models
]

[project.urls]
Homepage = "https://github.com/helindincel/drg-kg"
Repository = "https://github.com/helindincel/drg-kg"
Documentation = "https://github.com/helindincel/drg-kg/tree/main/docs"

[project.optional-dependencies]
# -------------------------------------------------------------------------
# Feature-specific optional dependencies. Install only what you need:
#   pip install -e ".[api]"          # API server
#   pip install -e ".[openai]"       # OpenAI embeddings
#   pip install -e ".[all]"          # Everything
#   pip install -e ".[dev]"          # Developer tooling (lint, type, test)
# -------------------------------------------------------------------------

# Graph persistence with Neo4j
neo4j = [
    "neo4j>=5.0.0",
]

# REST/UI API server
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

# Embedding providers
openai = [
    "openai>=1.0.0",
]
gemini = [
    "google-generativeai>=0.3.0",
]
openrouter = [
    # OpenRouter uses the openai client
    "openai>=1.0.0",
]
local = [
    "sentence-transformers>=2.2.0",
]

# Clustering backends
louvain = [
    "python-louvain>=0.16",
]
leiden = [
    "leidenalg>=0.9.0",
]
spectral = [
    "scikit-learn>=1.3.0",
]

# Graph processing
networkx = [
    "networkx>=3.0",
]

# Coreference resolution (NLP)
coreference = [
    "spacy>=3.7.0",
    "coreferee>=1.0.0",
    # Note: neuralcoref is deprecated but still works as a fallback;
    # for advanced coref consider AllenNLP or HuggingFace transformers.
]

# Convenience meta-extra
all = [
    "neo4j>=5.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "python-louvain>=0.16",
    "leidenalg>=0.9.0",
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
]

# Developer tooling: linting, type checking, testing, pre-commit
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
drg = "drg.cli:main"

# -----------------------------------------------------------------------------
# Build / packaging
# -----------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# IMPORTANT: This repo uses flat-layout and also contains non-package top-level
# folders like `inputs/` and `outputs/`. Without explicit configuration,
# setuptools' automatic discovery can mistakenly treat them as packages and fail
# editable installs with:
#   "Multiple top-level packages discovered in a flat-layout: ['drg', 'inputs', 'outputs']"
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["drg*"]
exclude = ["inputs*", "outputs*", "docs*", "examples*", "tests*"]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require API keys, slow)",
]
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.coverage.run]
source = ["drg"]
branch = true
omit = [
    # CLI / web glue: covered by integration tests, not unit coverage.
    "drg/cli.py",
    "drg/api/server.py",
    "drg/mcp_api.py",
    # Visualization is rendering glue — exercised in examples, not unit-tested.
    "drg/graph/visualization.py",
    "drg/graph/visualization_adapter.py",
    "drg/graph/neo4j_exporter.py",
    # LLM-driven modules: exercised by integration tests (require live API
    # keys). Excluded from unit-test coverage to keep the floor meaningful.
    "drg/optimizer/optimizer.py",
    "drg/optimizer/metrics.py",
    "drg/graph/schema_generator.py",
    "drg/graph/relationship_model/_llm_based.py",
    "drg/utils/llm_throttle.py",
    "drg/utils/env_loader.py",
    # Pending unit tests (tracked in CHANGELOG roadmap). These modules
    # currently lack dedicated tests; once they land, remove from omit so
    # the floor reflects real coverage.
    "drg/clustering/algorithms.py",
    "drg/clustering/summarization.py",
    "drg/graph/builders.py",
    "drg/graph/auto_clusters.py",
    "drg/graph/query_engine.py",
]

[tool.coverage.report]
# Modest baseline: floor that current unit-test surface clears comfortably.
# Raise as new tests come in; lowering it is a code smell.
fail_under = 50
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    # Defensive guards that we never want to count against coverage.
    "raise NotImplementedError\\(",
    "\\.\\.\\.$",
]

# -----------------------------------------------------------------------------
# Ruff (linter + formatter)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["outputs", "inputs", ".venv", "docs"]

[tool.ruff.lint]
# Start with a conservative, high-signal ruleset. Expand later (D, ANN, etc.).
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length is enforced by formatter
    "B008",   # function calls in defaults (FastAPI uses this pattern)
    # Project ships Turkish documentation/strings; Unicode "ambiguity"
    # rules are pure false positives for tr_TR content.
    "RUF001", # ambiguous unicode character in string
    "RUF002", # ambiguous unicode character in docstring
    "RUF003", # ambiguous unicode character in comment
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts in tests are fine
"examples/**" = ["E402"]  # examples may set env before importing
# Graph package __init__ uses conditional imports inside try/except
# (HAS_NETWORKX, HAS_LOUVAIN, ...). Imports cannot be at the top.
"drg/graph/__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# Mypy (gradual typing)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_unused_ignores = false   # noisy under gradual mode
warn_redundant_casts = true
warn_unused_configs = false   # tests.* / examples.* overrides not triggered by `mypy drg`
# Gradual mode: don't fail the build on missing annotations yet.
ignore_missing_imports = true
follow_imports = "silent"
no_implicit_optional = true
check_untyped_defs = false
# Categories that frequently surface in pre-existing code during a gradual
# typing adoption. We surface them as informational notes (mypy still prints
# them) but they do not fail CI. Each will be enabled individually once the
# corresponding cleanup pass lands.
disable_error_code = [
    "assignment",      # Optional[T] -> T narrowing not yet rigorous
    "arg-type",        # Optional unwrap call sites
    "var-annotated",   # implicit dict/list literal annotations
    "index",           # Mapping invariance edges
    "misc",            # DSPy conditional re-binding patterns
    "override",        # Strategy variance vs Protocol
    "truthy-function", # `if callable_obj:` checks
    "attr-defined",    # late-bound attrs on optional integrations
]

# mcp_api integrates with external MCP runtime; its types live downstream.
[[tool.mypy.overrides]]
module = "drg.mcp_api"
ignore_errors = true
